// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ember-test-types-task only renders todos/only test types if they a value > 0 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/rendering/tests/my-component-test.js",
          },
          "region": Object {
            "startColumn": 17,
            "startLine": 5,
          },
        },
      },
    ],
    "message": Object {
      "text": "rendering",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "testing",
      "group": "ember",
      "method": "test",
      "taskDisplayName": "Test Types",
      "taskName": "ember-test-types",
    },
    "ruleId": "test-types",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/rendering/tests/my-component-test.js",
          },
          "region": Object {
            "startColumn": 17,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "rendering",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "testing",
      "group": "ember",
      "method": "only",
      "taskDisplayName": "Test Types",
      "taskName": "ember-test-types",
    },
    "ruleId": "test-types",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/rendering/tests/my-component-test.js",
          },
          "region": Object {
            "startColumn": 17,
            "startLine": 7,
          },
        },
      },
    ],
    "message": Object {
      "text": "rendering",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "testing",
      "group": "ember",
      "method": "todo",
      "taskDisplayName": "Test Types",
      "taskName": "ember-test-types",
    },
    "ruleId": "test-types",
  },
]
`;

exports[`ember-test-types-task returns all the test types found in the app and outputs to json 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/application/someFolder/my-component-test.js",
          },
          "region": Object {
            "startColumn": 9,
            "startLine": 5,
          },
        },
      },
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/application/tests/my-component-test.js",
          },
          "region": Object {
            "startColumn": 9,
            "startLine": 5,
          },
        },
      },
    ],
    "message": Object {
      "text": "application",
    },
    "occurrenceCount": 2,
    "properties": Object {
      "category": "testing",
      "group": "ember",
      "method": "test",
      "taskDisplayName": "Test Types",
      "taskName": "ember-test-types",
    },
    "ruleId": "test-types",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/application/someFolder/my-component-test.js",
          },
          "region": Object {
            "startColumn": 9,
            "startLine": 6,
          },
        },
      },
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/application/someFolder/my-component-test.js",
          },
          "region": Object {
            "startColumn": 9,
            "startLine": 7,
          },
        },
      },
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/application/tests/my-component-test.js",
          },
          "region": Object {
            "startColumn": 9,
            "startLine": 6,
          },
        },
      },
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/application/tests/my-component-test.js",
          },
          "region": Object {
            "startColumn": 9,
            "startLine": 7,
          },
        },
      },
    ],
    "message": Object {
      "text": "application",
    },
    "occurrenceCount": 4,
    "properties": Object {
      "category": "testing",
      "group": "ember",
      "method": "skip",
      "taskDisplayName": "Test Types",
      "taskName": "ember-test-types",
    },
    "ruleId": "test-types",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/rendering/tests/my-component-test.js",
          },
          "region": Object {
            "startColumn": 9,
            "startLine": 5,
          },
        },
      },
    ],
    "message": Object {
      "text": "rendering",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "testing",
      "group": "ember",
      "method": "test",
      "taskDisplayName": "Test Types",
      "taskName": "ember-test-types",
    },
    "ruleId": "test-types",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/rendering/tests/my-component-test.js",
          },
          "region": Object {
            "startColumn": 9,
            "startLine": 6,
          },
        },
      },
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/rendering/tests/my-component-test.js",
          },
          "region": Object {
            "startColumn": 9,
            "startLine": 7,
          },
        },
      },
    ],
    "message": Object {
      "text": "rendering",
    },
    "occurrenceCount": 2,
    "properties": Object {
      "category": "testing",
      "group": "ember",
      "method": "skip",
      "taskDisplayName": "Test Types",
      "taskName": "ember-test-types",
    },
    "ruleId": "test-types",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/unit/tests/my-component-test.js",
          },
          "region": Object {
            "startColumn": 9,
            "startLine": 5,
          },
        },
      },
    ],
    "message": Object {
      "text": "unit",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "testing",
      "group": "ember",
      "method": "test",
      "taskDisplayName": "Test Types",
      "taskName": "ember-test-types",
    },
    "ruleId": "test-types",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/unit/tests/my-component-test.js",
          },
          "region": Object {
            "startColumn": 9,
            "startLine": 6,
          },
        },
      },
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/unit/tests/my-component-test.js",
          },
          "region": Object {
            "startColumn": 9,
            "startLine": 7,
          },
        },
      },
    ],
    "message": Object {
      "text": "unit",
    },
    "occurrenceCount": 2,
    "properties": Object {
      "category": "testing",
      "group": "ember",
      "method": "skip",
      "taskDisplayName": "Test Types",
      "taskName": "ember-test-types",
    },
    "ruleId": "test-types",
  },
]
`;
